# koalaty

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  justfile  pyproject.toml  skills-lock.json
.github/workflows/: qa.yml
docs/: architecture.md
docs/adr/: 0001-pouch-is-the-product-two-feeds.md  0002-files-source-of-truth-derived-index.md  0003-run-id-ordering-and-canonical-names.md  0004-example-tasks-are-copy-only.md  0004-schemas-package-for-domain-types.md  0005-runs-module-for-orchestration.md  0005-schemas-package-for-domain-types.md  0006-configuration-via-configaroo.md  0006-runs-module-for-orchestration.md  0007-configuration-via-configaroo.md  0007-console-module-stdout-stderr.md  0008-pending-run-storage.md  0009-pending-run-storage.md  0009-start-harvest-seam-and-driver-by-feed.md  0010-settings-env-only-mutable-config.md  0010-start-harvest-seam-and-driver-by-feed.md  0011-cli-error-seam-and-dynamic-task-literal.md  0011-settings-env-only-mutable-config.md  0012-cli-error-seam-and-dynamic-task-literal.md  0012-tokens-stored-cost-derived.md  0014-final-diff-is-koalaty-tree-delta.md  0014-harvest-records-session-status-not-success.md
docs/agents/: code-conventions.md  domain.md  git-workflow.md  quality-gates.md  testing.md
src/koalaty/: __init__.py  __main__.py  compare.py  config.py  console.py  pouch.py  (+8 more)
tests/: conftest.py  test_cli_errors.py  test_cli_validation.py  test_compare.py  test_config.py  test_examples.py  test_joey.py  test_pouch.py  test_run.py  test_runs.py  test_smoke.py  test_start_harvest.py  test_survey.py  test_task_new.py  test_tasks.py
(+30 files in other folders)
