[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "koalaty"
version = "0.1.0"
description = "Evaluate and compare models inside agent harnesses"
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.18.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
]

[project.scripts]
koalaty = "koalaty.__main__:main"

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "prek>=0.4.5",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "SLF001", "INP001"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
